samples/_failures_safe/1761788391_d8d57e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_7975f0ca.c: In function ‘execute_operation’:
./samples/SAFE/__tmp_7975f0ca.c:145:1: error: expected declaration or statement at end of input
  145 | void execute_operation(Graph *g, GraphOperation op, int param1, int param2) {
      | ^~~~
